Added scripts for one-to-one beam comparison with data, added configs for other simulation snapshots.

--- a/scripts/configs/kSZ_ratio_z05_2.yaml
+++ b/scripts/configs/kSZ_ratio_z05_2.yaml
@@ -1,7 +1,7 @@
 stack:
   redshift: 0.5
   load_field: true
-  save_field: false
+  save_field: true
 
   stack_field: false # If false, stacks maps instead of fields
   rad_distance: 1.0 # in arcmin
@@ -13,19 +13,19 @@ stack:
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
   
   projection: 'yz' # 'xy', 'xz', 'yz'
-  pixel_size: 0.2 # in arcmin
+  pixel_size: 0.5 # in arcmin
   filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
   particle_type: 'ionized_gas'
 
   filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type_2: 'total'
+  particle_type_2: 'ionized_gas'
 
 plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
-  fig_name: 'ratio_yz_beamtest'
+  fig_name: 'ratio_yz_nobeam'
   fig_type: 'png'
   plot_error_bars: true
 
@@ -55,11 +55,11 @@ simulations:
     sims:
       - name: 'TNG100-1'
         snapshot: 67
-      - name: 'TNG300-1'
-        snapshot: 67
-      - name: 'TNG300-2'
-        snapshot: 67
-      - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+      # - name: 'TNG300-1'
+      #   snapshot: 67
+      # - name: 'TNG300-2'
+      #   snapshot: 67
+      # - name: 'Illustris-1'
+      #   snapshot: 103
+      # - name: 'Illustris-2'
+      #   snapshot: 103
