--- a/scripts/configs/mass_ratio_data_z026.yaml
+++ b/scripts/configs/mass_ratio_data_z026.yaml
@@ -1,7 +1,7 @@
 stack:
-  redshift: 0.5
+  redshift: 0.26
   load_field: true
-  save_field: false
+  save_field: true
 
   stack_field: false # If false, stacks maps instead of fields
   rad_distance: 1.0 # in arcmin, or comoving kpc/h if stack_field is true
@@ -27,11 +27,12 @@ stack:
 plot:
   plot_data: true
   # data_path: '/pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/specY3_hsc/ratio_specY3_hsc_zbin1_DSigma_ksz_uniformweight.npz'
-  data_path: /pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/spec_Y3/ratio_LRG_full_no_src_with_cluster_mask_zbin1_DSigma_ksz_ggl.npz
+  # data_path: /pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/spec_Y3/ratio_LRG_full_no_src_with_cluster_mask_zbin1_DSigma_ksz_ggl.npz
+  data_path: /pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/spec_Y3/ratio_BGS_full_no_src_with_cluster_mask_zbin0_DSigma_ksz_ggl.npz
   # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   # data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
-  fig_name: 'ratios_yz_data'
+  fig_name: 'BGS_ratios_yz_data'
   fig_type: 'png'
   plot_error_bars: true
 
@@ -39,35 +40,35 @@ plot:
 simulations:
   - sim_type: 'SIMBA'
     sims:
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50noagn'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nox'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nojet'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nofb'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50noagn'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nox'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nojet'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nofb'
       - name: 'm100n1024'
-        snapshot: 125
+        snapshot: 136
         feedback: 's50'
   - sim_type: 'IllustrisTNG'
     sims:
-      - name: 'TNG100-1'
-        snapshot: 67
-      - name: 'TNG300-1'
-        snapshot: 67
+      # - name: 'TNG100-1'
+        # snapshot: 80
+      # - name: 'TNG300-1'
+        # snapshot: 67
       - name: 'TNG300-2'
-        snapshot: 67
+        snapshot: 80
       # - name: 'TNG50-3'
       #   snapshot: 67
       - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+        snapshot: 116
+      # - name: 'Illustris-2'
+      #   snapshot: 103
