--- a/scripts/configs/tau_profiles_z05_2.yaml
+++ b/scripts/configs/tau_profiles_z05_2.yaml
@@ -1,31 +1,39 @@
 stack:
   redshift: 0.5
   load_field: true
-  save_field: false
+  save_field: true
 
-  stack_field: false # If false, stacks maps instead of fields
-  rad_distance: 1.0 # in arcmin
+  rad_distance: 1.0 # in arcmin, or comoving kpc/h if stack_field is true
   min_radius: 1.0 # in rad_distance units
   max_radius: 10.0 # in rad_distance units
   num_radii: 11 # Number of radial bins between min_radius and max_radius
-
+  
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  
+
+  pixel_size: 0.5 # in arcmin if stack_field is false
+  n_pixels: 1000 # Number of pixels on a side if stack_field is true
   projection: 'yz' # 'xy', 'xz', 'yz'
-  pixel_size: 0.2 # in arcmin
+
   filter_type: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type: 'ionized_gas'
+  particle_type: 'tau' #'tau'
+  stack_field: false # If false, stacks maps instead of fields
+  convert_particle_type: false # if true, converts to kSZ units from mass units
 
   filter_type_2: 'DSigma' # Options: 'CAP', 'cumulative', 'DSigma'
-  particle_type_2: 'total'
+  particle_type_2: 'ionized_gas'
+  stack_field_2: true # If false, stacks maps instead of fields
+  convert_particle_type_2: true # if true, converts to kSZ units from mass units
+
+  subtract_mean: false # Whether to subtract the mean of the field before stacking
+
 
 plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
-  fig_name: 'ratio_yz_beamtest'
+  fig_name: 'fieldmap_yz'
   fig_type: 'png'
   plot_error_bars: true
 
@@ -55,11 +63,13 @@ simulations:
     sims:
       - name: 'TNG100-1'
         snapshot: 67
-      - name: 'TNG300-1'
-        snapshot: 67
-      - name: 'TNG300-2'
-        snapshot: 67
-      - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+      # - name: 'TNG300-1'
+      #   snapshot: 67
+      # - name: 'TNG300-2'
+      #   snapshot: 67
+      # - name: 'TNG50-3'
+      #   snapshot: 67
+      # - name: 'Illustris-1'
+      #   snapshot: 103
+      # - name: 'Illustris-2'
+      #   snapshot: 103
