--- a/scripts/configs/3D_mass_ratio_z05.yaml
+++ b/scripts/configs/3D_mass_ratio_z05.yaml
@@ -6,11 +6,11 @@ stack:
   rad_distance: 1.0 # in arcmin
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
-  particle_type: 'gas'
+  particle_type: 'ionized_gas'
   projection: 'yz' # 'xy', 'xz', 'yz'
   pixel_size: 0.5 # in arcmin
   filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma
-  particle_type_2: 'total'
+  particle_type_2: 'gas'
   n_pixels: 1000
   min_radius: 200.0 # in comoving kpc/h
   max_radius: 4000.0 # in comoving kpc/h
@@ -22,7 +22,7 @@ plot:
   plot_data: false
   data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
   data_label: 'Hadzhiyska 2024 pz1'
-  fig_path: '../figures/2025-12/'
+  fig_path: '../figures/'
   fig_name: 'ratios_yz'
   fig_type: 'pdf'
   plot_error_bars: true
