--- a/scripts/configs/2D_stackArea_z05.yaml
+++ b/scripts/configs/2D_stackArea_z05.yaml
@@ -5,9 +5,11 @@ stack:
 
   stack_field: false # If false, stacks maps instead of fields
   rad_distance: 1.0 # in arcmin, or comoving kpc/h if stack_field is true
-  min_radius: 1.0 # in rad_distance units
-  max_radius: 10.0 # in rad_distance units
-  num_radii: 11 # Number of radial bins between min_radius and max_radius
+  # min_radius: 1.0 # in rad_distance units
+  # max_radius: 10.0 # in rad_distance units
+  min_radius: 200.0 # in comoving kpc/h units
+  max_radius: 6000.0 # in comoving kpc/h units
+  num_radii: 15 # Number of radial bins between min_radius and max_radius
   
   mask_haloes: false
   mask_radii: 3.0 # Number of virial radii to mask out for haloes. In units of R200c
@@ -18,19 +20,20 @@ stack:
 
   filter_type: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
   particle_type: 'ionized_gas'
+  baryon_types: ['ionized_gas', 'neutral_gas', 'Stars', 'BH']  # baryon components to show in the stacked-area plot
   filter_type_2: 'CAP' # Options: 'CAP', 'cumulative', 'DSigma', 'upsilon'
   particle_type_2: 'total'
 
   subtract_mean: false # Whether to subtract the mean of the field before stacking
 
 
+
 plot:
   plot_data: false
-  data_path: '/pscratch/sd/r/rhliu/projects/Weak_lensing/ratio_measurements/specY3_hsc/ratio_specY3_hsc_zbin1_DSigma_ksz_uniformweight.npz'
-  # data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
-  # data_label: 'Hadzhiyska 2024 pz1'
+  data_path: '../data/Fig1_Fig8_dr10_allfoot_perbin_dr6_pzbin1.npz'
+  data_label: 'Hadzhiyska 2024 pz1'
   fig_path: '../figures/'
-  fig_name: 'ratios_yz'
+  fig_name: 'TNG_2D'
   fig_type: 'pdf'
   plot_error_bars: true
 
@@ -38,35 +41,33 @@ plot:
 simulations:
   - sim_type: 'SIMBA'
     sims:
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50noagn'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nox'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nojet'
-      - name: 'm50n512'
-        snapshot: 125
-        feedback: 's50nofb'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50noagn'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nox'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nojet'
+      # - name: 'm50n512'
+      #   snapshot: 125
+      #   feedback: 's50nofb'
       - name: 'm100n1024'
         snapshot: 125
         feedback: 's50'
   - sim_type: 'IllustrisTNG'
     sims:
-      - name: 'TNG100-1'
-        snapshot: 67
+      # - name: 'TNG100-1'
+        # snapshot: 67
       - name: 'TNG300-1'
         snapshot: 67
-      - name: 'TNG300-2'
-        snapshot: 67
-      # - name: 'TNG50-3'
+      # - name: 'TNG300-2'
       #   snapshot: 67
-      - name: 'Illustris-1'
-        snapshot: 103
-      - name: 'Illustris-2'
-        snapshot: 103
+      # - name: 'Illustris-1'
+        # snapshot: 103
+      # - name: 'Illustris-2'
+      #   snapshot: 103
